fixed a bug of alignment

--- a/game/style1.css
+++ b/game/style1.css
@@ -43,8 +43,9 @@ body {
   margin-bottom: 1.5rem;
   text-align: center;
   font-weight: 400;
-  margin-right: .75rem;
-  margin-left: .75rem;
+  margin-right: auto;
+  margin-left: auto;
+  width: 70%;
 }
 
 
